--- a/templates/home.html
+++ b/templates/home.html
@@ -7,10 +7,50 @@
        font-style: italic;
       color: rgb(255, 70, 0)
      }
+     h2{
+       font-size: 20;
+       font-style: italic;
+       text-decoration: underline
+       }
+     p{
+       color: rgb(80, 80, 80)
+       font-family: roboto;
+      }
+
+     #container{
+       max-width: 820px;
+       margin: 0 auto 0 auto;
+       
+     }
+     
    </style>
  </head>
  <body>
+   <div id="container">
    <h1><center><img src="https://shree-jewellers.nilmali.repl.co/static/banner.jpeg" height='90'></center></h1>
    <h4><center>SHREE JEWELLERS</center></h4>
+
+   <h2>ABOUT US</h2>
+   <p>
+     We are one of the oldest business families in India with a family legacy of 28 years in business. Started for the noble cause of nation-building and self-sustenance in a pre-independent India, the forefathers believed ethical, honest and transparent business practices should form the foundation of the group. Having ventured into jewellery retailing in 1993 in Nipani, India, where we are headquartered, and as on June 30, 2020, we have 2 showrooms spread across India.
+ </p>
+     <p>
+       <h3 style="text-decoration: underline">CEO's Message</h3>
+       <h3 style="font-style: italic;"> VILAS MALI</h3>
+       <p>
+         Today, when I look around me, business is all about toplines, bottomlines and market capitalisation. But Kalyan entered into business in a pre-independent India to build a better India, as our forefathers believed ethical, fair business will make India self-sufficient and strong.
+       </p>
+     <img src="https://shree-jewellers.nilmali.repl.co/static/pic.jpg" height= 360px >
+     <p>
+       Personally, I believe Kalyan Jewellers' major achievement is the trust we have earned from millions of people across the length and breadth of a huge subcontinent like India, and abroad in the GCC.
+
+We have always believed in fair and transparent business. We have believed that the customer should be understood so well that we know his needs much before he understands them himself. We have believed that an enlightened customer is the best customer. These are the simple principles that have helped us reach where we are today.</p>
+</p>
+  
+     
+ <div style="font-style:Bold;">
+   <Button>Contact Us</Button>
+   
+</div>
  </body>
 </html>
