css without bootstrap

--- a/templates/home.html
+++ b/templates/home.html
@@ -29,7 +29,11 @@
    <div id="container">
    <h1><center><img src="https://shree-jewellers.nilmali.repl.co/static/banner.jpeg" height='90'></center></h1>
    <h4><center>SHREE JEWELLERS</center></h4>
-
+<div style="font-style:Bold;">
+  <Button>Contact Us</Button>
+  <Button>Gallery</Button>
+</div>
+   
    <h2>ABOUT US</h2>
    <p>
      We are one of the oldest business families in India with a family legacy of 28 years in business. Started for the noble cause of nation-building and self-sustenance in a pre-independent India, the forefathers believed ethical, honest and transparent business practices should form the foundation of the group. Having ventured into jewellery retailing in 1993 in Nipani, India, where we are headquartered, and as on June 30, 2020, we have 2 showrooms spread across India.
@@ -42,15 +46,10 @@
        </p>
      <img src="https://shree-jewellers.nilmali.repl.co/static/pic.jpg" height= 360px >
      <p>
-       Personally, I believe Kalyan Jewellers' major achievement is the trust we have earned from millions of people across the length and breadth of a huge subcontinent like India, and abroad in the GCC.
+       Personally, I believe Shree Jewellers' major achievement is the trust we have earned from millions of people across the length and breadth of a huge subcontinent like India, and abroad in the GCC.
 
 We have always believed in fair and transparent business. We have believed that the customer should be understood so well that we know his needs much before he understands them himself. We have believed that an enlightened customer is the best customer. These are the simple principles that have helped us reach where we are today.</p>
-</p>
-  
-     
- <div style="font-style:Bold;">
-   <Button>Contact Us</Button>
-   
+</p>  
 </div>
  </body>
 </html>
