--- a/templates/css.html
+++ b/templates/css.html
@@ -10,7 +10,6 @@
        font-style: italic;
       color: rgb(255, 70, 0)
      }
-  
      h3{
        
        font-style: italic;
@@ -32,7 +31,7 @@
    <hr>
    <h3>ABOUT US</h3>
    <p class="lead" style="font-family: Calisto MT;">
-     We are one of the oldest business families in India with a family legacy of 28 years in business. Started for the noble cause of nation-building and self-sustenance in a pre-independent India, the forefathers believed ethical, honest and transparent business practices should form the foundation of the group. Having ventured into jewellery retailing in 1993 in Nipani, India, where we are headquartered, and as on June 30, 2020, we have 2 showrooms spread across India.
+     We are one of the oldest business families in India with a family legacy of 32 years in business. Started for the noble cause of nation-building and self-sustenance in a pre-independent India, the forefathers believed ethical, honest and transparent business practices should form the foundation of the group. Having ventured into jewellery retailing in 1985 in Nipani, India, where we are headquartered, and as on June 30, 2020, we have 2 showrooms spread across India.
  </p>
      <hr>
      <p >
@@ -40,7 +39,7 @@
        <br/>
        <h3 style="font-style: italic;"> VILAS MALI</h3>
        <p class="lead" style="font-family: Calisto MT;">
-         Today, when I look around me, business is all about toplines, bottomlines and market capitalisation. But Kalyan entered into business in a pre-independent India to build a better India, as our forefathers believed ethical, fair business will make India self-sufficient and strong.
+         Today, when I look around me, business is all about toplines, bottomlines and market capitalisation. But Shree entered into business in a pre-independent India to build a better India, as our forefathers believed ethical, fair business will make India self-sufficient and strong.
        </p>
      <img src="https://shree-jewellers.nilmali.repl.co/static/pic.jpg" height= 360px >
      <p class="lead" style="font-family: Calisto MT;">
