--- a/templates/css.html
+++ b/templates/css.html
@@ -24,10 +24,10 @@
    <h1><center><img src="https://shree-jewellers.nilmali.repl.co/static/banner.jpeg" height='90'></center></h1>
    <h4 ><center>SHREE JEWELLERS</center></h4>
  <div class="text-center mt-4 mb-2">
-     <button type="button" class="btn btn-secondary btn-sm" style="font-style: italic;">About Us</button>
-   <button type="button" class="btn btn-secondary btn-sm" style="font-style: italic;">Gallery</button>
+    <a href="https://shree-jewellers.nilmali.repl.co/"<button type="button" class="btn btn-secondary btn-sm" style="font-style: italic;">About Us</button></a>
+   <a href="https://shree-jewellers.nilmali.repl.co/static/gallery.html"<button type="button" class="btn btn-secondary btn-sm" style="font-style: italic;">Gallery</button></a>
    <button type="button" class="btn btn-secondary btn-sm" style="font-style: italic;">Location</button>
-   <button type="button" class="btn btn-secondary btn-sm" style="font-style: italic;">Contact Us</button></div>
+   <button type="button" class="btn btn-secondary btn-sm" style="font-style: italic;">Contact Us</button></div>  
    <hr>
    <h3>ABOUT US</h3>
    <p class="lead" style="font-family: Calisto MT;">
@@ -47,9 +47,7 @@
 
 We have always believed in fair and transparent business. We have believed that the customer should be understood so well that we know his needs much before he understands them himself. We have believed that an enlightened customer is the best customer. These are the simple principles that have helped us reach where we are today.</p>
 </p>  
-     <p class="text-center mt-4">
-       Copyright @ 2022, SHREE JEWELLERS.
-     </p>
+     {% include 'footer.html' %}
 </div>
  </body>
 </html>
