--- a/templates/home.html
+++ b/templates/home.html
@@ -26,12 +26,12 @@
    </style>
  </head>
  <body>
+   
    <div id="container">
    <h1><center><img src="https://shree-jewellers.nilmali.repl.co/static/banner.jpeg" height='90'></center></h1>
    <h4><center>SHREE JEWELLERS</center></h4>
 <div style="font-style:Bold;">
-  <Button>Contact Us</Button>
-  <Button>Gallery</Button>
+  {% include 'nav.html' %}
 </div>
    
    <h2>ABOUT US</h2>
