--- a/templates/css.html
+++ b/templates/css.html
@@ -52,7 +52,7 @@
        <p class="lead" style="font-family: Calisto MT;">
          Today, when I look around me, business is all about toplines, bottomlines and market capitalisation. But Shree entered into business in a pre-independent India to build a better India, as our forefathers believed ethical, fair business will make India self-sufficient and strong.
        </p>
-     <img src="https://shree-jewellers.nilmali.repl.co/static/pic.jpg" height= 360px >
+     <img src="https://shree-jewellers.nilmali.repl.co/static/Img.jpeg" height= 360px >
      <p class="lead" style="font-family: Calisto MT;">
        Personally, I believe Shree Jewellers' major achievement is the trust we have earned from millions of people across the length and breadth of a huge subcontinent like India, and abroad in the GCC.
 
